--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jotai": "^2.12.5",
     "lucide-react": "^0.533.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
